--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chonk"
+name = "i3-conf-searcher"
 version = "0.1.0"
 authors = ["David Weis <dweis7@gmail.com>"]
 edition = "2018"
