--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ tokio = "0.2"
 futures = "0.3"
 regex = "1.3"
 fuzzy-matcher = "0.3"
+# iced = { git = "https://github.com/hecrj/iced", features = ["debug", "tokio"] }
+iced = { version = "0.1", features = ["debug", "tokio"] }
