--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -31,7 +31,7 @@ jobs:
     - id: coverage
       name: coverage
       uses: actions-rs/grcov@v0.1
-    - name: Codecov
-      uses: codecov/codecov-action@v1.0.7
-      with:
-        file: ${{ steps.coverage.outputs.report }}
+    # - name: Codecov
+    #   uses: codecov/codecov-action@v1.0.7
+    #   with:
+    #     file: ${{ steps.coverage.outputs.report }}
