Add args for light theme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ futures = "0.3"
 regex = "1.3"
 fuzzy-matcher = "0.3"
 iced = { version = "0.1", features = ["debug", "tokio"] }
+clap = "3.0.0-beta.1"
