--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ tokio = "0.2"
 futures = "0.3"
 regex = "1.3"
 fuzzy-matcher = "0.3"
-# iced = { version = "0.1", features = ["debug", "tokio"] }
-iced = { git = "https://github.com/dmweis/iced", branch = "feature/keyboard_handling", features = ["debug", "tokio"] }
+iced = { version = "0.1", features = ["debug", "tokio"] }
+iced_native = "0.2"
 clap = "3.0.0-beta.1"
