--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ fuzzy-matcher = "0.3"
 iced = { version = "0.3", features = ["debug", "tokio"] }
 iced_native = "0.4"
 clap = "3.0.0-beta.1"
+enigo = "0.0.14"
+anyhow = "1.0"
