--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+[target.'cfg(unix)'.dependencies]
 tokio-i3ipc = "0.12"
+[target.'cfg(windows)'.dependencies]
+reqwest = "0.11.3"
 tokio = "1.5"
 futures = "0.3"
 regex = "1.3"
@@ -21,3 +24,4 @@ fuzzy-matcher = "0.3"
 iced = { version = "0.3", features = ["debug", "tokio"] }
 iced_native = "0.4"
 clap = "3.0.0-beta.1"
+thiserror = "1.0"
